<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">


    <ImageView
        android:id="@+id/ivRegistration"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/descr_logo_reset_pwd"
        android:src="@drawable/registration"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleRegistration"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleRegistration"
        app:layout_constraintStart_toStartOf="@+id/tvTitleRegistration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvTitleRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/tv_title_registration"
        android:textColor="@color/primary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEmailRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRegistration" />

    <EditText
        android:id="@+id/etEmailRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_tv_email_reset_pwd"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordRegistration"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRegistration" />

    <EditText
        android:id="@+id/etPasswordRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/et_password_registration"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/etNameRegistration"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegistration"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/etNameRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="name"
        android:hint="@string/et_name_registration"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/etLastnameRegistration"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegistration"
        tools:layout_editor_absoluteX="75dp" />

    <EditText
        android:id="@+id/etLastnameRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/et_lastname_registration"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/cbAcceptRules"
        app:layout_constraintTop_toBottomOf="@+id/etNameRegistration" />

    <CheckBox
        android:id="@+id/cbAcceptRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_license"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistration"
        app:layout_constraintStart_toStartOf="@+id/etLastnameRegistration"
        app:layout_constraintTop_toBottomOf="@+id/etLastnameRegistration" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_btn_main"
        android:text="@string/btn_registration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAcceptRules"
         />

</androidx.constraintlayout.widget.ConstraintLayout>