<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPassword.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/ivRegistration"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/descr_logo_reset_pwd"
        android:src="@drawable/reset_pwd"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitleRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/tv_reset_pwd"
        android:textColor="@color/primary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEmailResetPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etEmailResetPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_tv_email_reset_pwd"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistration"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRegistration"
        tools:layout_editor_absoluteX="110dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_btn_main"
        android:text="@string/btn_send_email_reset"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailResetPwd" />

    <TextView
        android:id="@+id/tvResetPwdInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_reset_pwd_info"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistration" />

</androidx.constraintlayout.widget.ConstraintLayout>